<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_notification"
            android:title="@string/menu_notification" />
        <item
            android:id="@+id/nav_schedule"
            android:title="@string/menu_schedule" />
        <item
            android:id="@+id/nav_resource"
            android:title="@string/menu_resource" />

    </group>

    <item android:title="@string/menu_communicate">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:title="@string/menu_about" />
            <item
                android:id="@+id/nav_feedback"
                android:title="@string/menu_feedback" />
        </menu>
    </item>

</menu>
